--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=1000">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>CERF</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,500;0,700;0,800;0,900;1,100;1,700;1,800&display=swap" rel="stylesheet">
@@ -29,11 +29,16 @@
                                     <li class="menu__item"><a href="#" class="menu__link">Контанты</a></li>
                             </ul>
                         </nav>
-                        <a href="tel;:+78009039090" class="phone-number">
+                        <a href="tel;:+78009039090" class="phone-number header__phone-number">
                             <span class="phone-number__icon">
                                 <img src="./foto/Frame.png" class="phone-number__icon-elem">
                             </span>
                             <span class="phone-number__text">8 800 903 90 90</span>
+                        </a>
+                        <a href="" class="hamburger">
+                            <span class="hamburger__plank"></span>
+                            <span class="hamburger__plank"></span>
+                            <span class="hamburger__plank"></span>
                         </a>
                     </header>
                     <div class="hero__title-section">
@@ -43,24 +48,27 @@
                      </div>
                     <div class="hero__icons-section">
                         <ul class="features">
-                            <li class="features__item features">
-                                <div class="feature__icon">
-                                    <img src="./foto/main-1.png" alt="leaf icon">
-                                </div>
+                            <li class="features__item features ">
+                                    <div class="feature__icon">
+                                    <a href="#" class="leaf__icon leaf__icon__serf ">
+                                    </a>
+                                    </div>
                                 <div class="feature__text">Уникальный дизайн</div>
                             </li>
-                            <li class="features__item features">
+                            <li class="features__item features ">
                                 <div class="feature__icon">
-                                    <img src="./foto/main-2.png" alt="leaf icon">
+                                <a href="#" class="leaf__icon leaf__icon__saw ">
+                                </a>
                                 </div>
-                                <div class="feature__text">Прочные материалы</div>
-                            </li>
-                            <li class="features__item features">
-                                <div class="feature__icon">
-                                    <img src="./foto/main-3.png" alt="leaf icon">
-                                </div>
-                                <div class="feature__text">Быстрая доставка</div>
-                            </li>
+                            <div class="feature__text">Прочные материалы</div>
+                        </li>                            
+                        <li class="features__item features ">
+                            <div class="feature__icon">
+                            <a href="#" class="leaf__icon leaf__icon__car ">
+                            </a>
+                            </div>
+                        <div class="feature__text">Быстрая доставка</div>
+                    </li>
                         </ul>
                     </div>
                 </div>
@@ -128,7 +136,7 @@
                         <div class="reviews__display">
                         <div class="reviews__display-inner">
                             <div class="reviews__avatar">
-                                <img src="./foto/Rectangle 7.png" alt="reviews__avatar" class="reviews__avatar-img">
+                                    <img src="./foto/Rectangle 7.png" alt="reviews__avatar" class="reviews__avatar-img">
                             </div>
                             <article class="reviews__content">
                                 <h3 class="reviews__title">Лучший дизайн</h3>
@@ -235,6 +243,7 @@
                     </form>
                 </div>
             </section>
+          
         </div>
     </div>
     <nav class="fixed-menu">
