--- a/index.html
+++ b/index.html
@@ -17,7 +17,17 @@
             <section class="hero">
                 <header class="header">
                     <img src="./foto/Vector.png" alt="CERF logo" class="">
-
+                    <nav class="menu">
+                        <ul class="menu__list">
+                                <li class="menu__item"><a href="#" class="menu__link">О нас</a></li>
+                                <li class="menu__item"><a href="#" class="menu__link">Серфборды</a></li>
+                                <li class="menu__item"><a href="#" class="menu__link">Команда</a></li>
+                                <li class="menu__item"><a href="#" class="menu__link">Меню</a></li>
+                                <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
+                                <li class="menu__item"><a href="#" class="menu__link">Как мы работаем</a></li>
+                                <li class="menu__item"><a href="#" class="menu__link">Контанты</a></li>
+                        </ul>
+                    </nav>
                     <a href="tel;:+78009039090" class="phone-number header__phone-number">
                         <span class="phone-number__icon">
                             <img src="./foto/Frame.png" class="phone-number__icon-elem">
