--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <section class="section catalog-priсe">
                 <div class="container">
                     <div class="catalog-bord" >
-                        <div class="catalog__item__service"> 
+                        <li class="catalog__item__service"> 
                             <div class="catalog__img">
                                 <img src="./foto/2.png" alt="" class="catalog__spot">
 
@@ -215,10 +215,11 @@
                                         <div class="price_botton__price__coll"> 7000 ₽ </div>
                                         <a href="" class="btn btn--theme--yellow btn--theme--price">Заказать</a>
                                     </div> 
-                                </div>                               
+                                </div>
+                                
                             </div>
                             
-                        </div>
+                        </li>
                         <div class="slide">
                             <div class="slide__cp">
                             <button class="slide__button"> <img src="./foto/Vector 8.png" alt=""> </button>
