--- a/index.html
+++ b/index.html
@@ -252,20 +252,20 @@
                                 <div class="reviews__autor">Ольга Макарова</div>
                             </article>
                         </div>
-                        <ul class="reviews__switcher">
-                            <li class="reviews__swither-item interective-avatar interective-avatar--active">
-                                <a href="#" class="interective-avatar-link">
-                                    <img src="./foto/feedback--active.png" alt="black hair girl" class="interective-avatar__img">
+                        <ul class="reviews-switcher">
+                            <li class="reviews-switcher__item active">
+                                <a href="#" class="reviews-switcher__link">
+                                    <img src="./foto/Rectangle 5.png" alt="black hair girl" class="interective-avatar__img">
 
                                 </a>
                             </li>
-                            <li class="reviews__swither-item interective-avatar interective-avatar--active">
-                                <a href="#" class="interective-avatar-link">
+                            <li class="reviews-switcher__item">
+                                <a href="#" class="rreviews-switcher__link">
                                     <img src="./foto/feedback.png" alt="man" class="interective-avatar__img">
                                 </a>
                             </li>
-                            <li class="reviews__swither-item interective-avatar interective-avatar--active">
-                                <a href="#" class="interective-avatar-link">
+                            <li class="reviews-switcher__item">
+                                <a href="#" class="reviews-switcher__link">
                                     <img src="./foto/feedback 2.png" alt="wait hair girl" class="interective-avatar__img">
                                 </a>
                             </li>
@@ -414,5 +414,7 @@
       </div>
 </body>
 <script src="./components/burger.js"></script>
+<script src="./scripts/tabs.js"></script>
+
 </html>
 
